--- a/style.css
+++ b/style.css
@@ -649,7 +649,7 @@ i.fa-brands{
     .skills-image {
       width: 300px;
       height: 300px;
-      background-image: url(/images/skillsbg.jpg);
+      background-image: url(images/skillsbg.jpg);
       background-size: cover;
       border-radius: 10px;
       filter: drop-shadow(0px 2px 7px #888686);
